# wxWidgets

./: .cirrus.yml  .clang-format  .cvsignore  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .last-merge  .mailmap  .travis.yml  BuildCVS.txt  BuildGit.txt  BuildSVN.txt  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Classes.txt  Desktop.ini  INSTALL  MPW.make  Makefile  Makefile.am  Makefile.in  Mingw32-gcc295.patches  README-GIT.md  README.md  TODO  TODO.list  TODO.txt  Wxwin.dsp  Wxwin.dsw  acconfig.h  acinclude.m4  aclocal.m4  appveyor.yml  autoconf_inc.m4  autogen.sh  config.guess  config.sub  (+50 more)
contrib/: Makefile.in  configure  configure.in
contrib/applet/: applet.cpp  appletwindow.cpp
contrib/docs/: .cvsignore
contrib/samples/: Makefile.in
contrib/src/: Makefile.in
contrib/utils/: Makefile.in
demos/: Makefile.in  configure  configure.in  demos.bkl  makefile.b32  makefile.bcc  makefile.g95  makefile.gcc  makefile.vc  makefile.wat
demos/bombs/: .cvsignore  BombsM5.mcp  BombsVC.dsp  BombsVC.dsw  Makefile.in  bombs.cpp  bombs.dsp  bombs.dsw  bombs.h  bombs.pro  bombs.xpm  bombs1.cpp  bombsCE.vcp  bombsCE.vcw  bombsM5.xml  bombs_vc7.vcproj  bombs_vc8.vcproj  bombs_vc9.sln  bombs_vc9.vcproj  descrip.mms  game.cpp  game.h  makefile.b32  makefile.bcc  makefile.dos  makefile.gcc  makefile.unx  makefile.vc  makefile.wat  makemac.mcp  readme.txt
demos/dbbrowse/: .cvsignore  DbbrowseM5.mcp  DbbrowseVC.dsp  DbbrowseVC.dsw  Makefile.in  browsedb.cpp  browsedb.h  dbbrowse.bkl  dbbrowse.cpp  dbbrowse.dsp  dbbrowse.dsw  dbbrowse.h  dbbrowse.pro  dbbrowse.rc  dbbrowseM5.xml  dbgrid.cpp  dbgrid.h  dbtree.cpp  dbtree.h  dlguser.cpp  dlguser.h  doc.cpp  doc.h  dummy.cpp  g.cmd  go.cmd  gogcc.cmd  govc.cmd  makefile.b32  makefile.bcc  makefile.g95  makefile.gcc  makefile.gtk  makefile.vc  makefile.wat  o.cmd  pgmctrl.cpp  pgmctrl.h  std.h  tabpgwin.cpp  (+1 more)
demos/forty/: .cvsignore  FortyM5.mcp  FortyVC.dsp  FortyVC.dsw  Makefile.in  canvas.cpp  canvas.h  card.cpp  card.h  forty.bkl  forty.cpp  forty.def  forty.dsp  forty.dsw  forty.h  forty.r  forty.rc  forty.xpm  fortyM5.xml  forty_vc7.vcproj  forty_vc8.vcproj  forty_vc9.sln  forty_vc9.vcproj  game.cpp  game.h  make_cw.mcp  makefile.b32  makefile.bcc  makefile.dos  makefile.g95  makefile.gcc  makefile.unx  makefile.vc  makefile.wat  makemac.mcp  makemac6.mcp  pictures.xpm  pile.cpp  pile.h  playerdg.cpp  (+8 more)
demos/fractal/: .cvsignore  FractalM5.mcp  FractalVC.dsp  FractalVC.dsw  Makefile.in  descrip.mms  fractal.bkl  fractal.cpp  fractal.def  fractal.dsp  fractal.dsw  fractal.pro  fractal.rc  fractalM5.xml  fractal_vc7.vcproj  fractal_vc8.vcproj  fractal_vc9.sln  fractal_vc9.vcproj  makefile.bcc  makefile.g95  makefile.gcc  makefile.unx  makefile.vc  makefile.wat  makemac.mcp
demos/life/: .cvsignore  LifeM5.mcp  LifeVC.dsp  LifeVC.dsw  Makefile.in  breeder.lif  dialogs.cpp  dialogs.h  game.cpp  game.h  life.bkl  life.cpp  life.dsp  life.dsw  life.h  life.pro  life.rc  lifeM5.xml  life_vc7.vcproj  life_vc8.vcproj  life_vc9.sln  life_vc9.vcproj  makefile.b32  makefile.bcc  makefile.dos  makefile.g95  makefile.gcc  makefile.unx  makefile.vc  makefile.wat  makemac.mcp  mondrian.xpm  reader.cpp  reader.h  samples.inc
demos/poem/: .cvsignore  Makefile.in  PoemM5.mcp  PoemVC.dsp  PoemVC.dsw  corner1.xpm  corner2.xpm  corner3.xpm  corner4.xpm  descrip.mms  makefile.b32  makefile.bcc  makefile.g95  makefile.gcc  makefile.unx  makefile.vc  makefile.wat  makemac.mcp  poem.bkl  poem.dsp  poem.dsw  poem.pro  poemM5.xml  poem_vc7.vcproj  poem_vc8.vcproj  poem_vc9.sln  poem_vc9.vcproj  wxpoem.cpp  wxpoem.def  wxpoem.h  wxpoem.idx  wxpoem.rc  wxpoem.txt  wxpoem.xpm  wxpoemCE.vcp  wxpoemCE.vcw
include/wx/: Makefile.am  Makefile.in  WallCtrl.h  WallCtrlBitmapSource.h  WallCtrlPlaneSurface.h  WallCtrlSurface.h  aboutdlg.h  accel.h  access.h  activityindicator.h  addremovectrl.h  affinematrix2d.h  affinematrix2dbase.h  afterstd.h  anidecod.h  animate.h  animdecod.h  any.h  anybutton.h  anystr.h  app.h  appprog.h  appprogress.h  apptrait.h  archive.h  arrimpl.cpp  arrstr.h  artids.h  artprov.h  atomic.h  bannerwindow.h  barbutton.h  base64.h  beforestd.h  bitmap.h  bmpbndl.h  bmpbuttn.h  bmpcbox.h  bookctrl.h  brush.h  (+485 more)
install/gtk/: INSTALL  configure  configure.in
misc/afm/: Cour.afm  CourBo.afm  CourO.afm  Helv.afm  HelvBo.afm  HelvO.afm  Makefile.am  TimesBo.afm  TimesBoO.afm  TimesO.afm  TimesRo.afm  Zapf.afm
misc/gs_afm/: .cvsignore  Cour.afm  CourBo.afm  CourBoO.afm  CourO.afm  Helv.afm  HelvBo.afm  HelvBoO.afm  HelvO.afm  Makefile.am  TimesBo.afm  TimesBoO.afm  TimesO.afm  TimesRo.afm
mobile/: Makefile.in  configure  configure.in
mobile/wxedit/: Makefile.in  wxedit.cpp  wxedit.h
samples/: .cvsignore  Info.plist  Info.plist.in  Makefile  Makefile.am  Makefile.in  SamplesVC.dsw  aclocal.m4  autoconf_inc.m4  configure  configure.in  makefile.b32  makefile.bcc  makefile.dos  makefile.g95  makefile.gcc  makefile.nt  makefile.sc  makefile.unx  makefile.vc  makefile.wat  sample.rc  sample.xpm  samples.bkl  samples.dsw  samples.props  samples_vc14.sln  samples_vc15.sln  samples_vc16.sln  samples_vc17.sln  samples_vc18.slnx
samples/access/: Makefile.in  Makefile.sc  access.bkl  access.dsp  access.dsw  access.vcxproj  access.vcxproj.filters  access_vc7.sln  access_vc7.vcproj  access_vc8.sln  access_vc8.vcproj  access_vc9.sln  (+13 more)
src/: .cvsignore  Makefile  Makefile.am  Makefile.in  WallCtrlBitmapSource.cpp  WallCtrlDataSource.cpp  WallCtrlPlaneSurface.cpp  WallCtrlSurface.cpp  Wxwindll.icc  cygnus.bat  files.lst  gtk.env  gtk.inc  make.env  make.env.in  make_cw.mcp  make_cw.old.mcp  makeb32.env  makebcc.env  makefile.bcc  makefile.dos  makefile.nt  makefile.va  makefile.vc  makeg295.env  makeg95.env  makelib.b32  makelib.env  makelib.env.in  makelib.g95  makelib.gtk  makelib.sc  makelib.vc  makelib.wat  makemac.mcp  makemac6.mcp  makemac7.mcp  makemsc.env  makeprog.b32  makeprog.bcc  (+67 more)
utils/: Makefile  Makefile.in  configure  configure.in  makefile.bcc  makefile.gcc  makefile.vc  makefile.wat  utils.bkl
(+25300 files in other folders)
